Minor aesthetics. Logo, titles

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- Using Local Font -->
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-    <title>Get it done</title>
+    <title>Mercurio</title>
     <meta
       name="description"
       content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
