Query switch in advancement list. Some query adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>Mercurio</title>
     <meta
       name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
+      content="The ideal project manager for your research and innovation activities."
     />
     <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
     <meta name="author" content="Minimal UI Kit" />
